fixed gap

--- a/src/code-previewer/style.scss
+++ b/src/code-previewer/style.scss
@@ -136,7 +136,6 @@
 			.frontend-tab-wrapper {
 				display: flex;
 				align-items: center;
-				gap: 4px;
 				background: #fff;
 				border: 1px solid #dee2e6;
 				border-radius: 4px;
